genel bakış satış analizi ive ürün analizi sayfaları yazıldı

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <title>Alternatif Market KDS - Giriş</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body class="login-page">
     <div class="login-container">
         <h2>Yönetici Girişi</h2>
         <form id="loginForm">
@@ -17,4 +19,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
