--- a/public/panel.html
+++ b/public/panel.html
@@ -163,23 +163,31 @@
 
             <!-- VIEW 4: STRATEGIC PLANNING (STRATEJİK PLANLAMA) -->
             <div id="view-strategic" class="view-section" style="display:none;">
+                <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+                    <h2 style="margin:0;">Stratejik Planlama & Büyüme Fırsatları</h2>
+                    <!-- Strategic City Filter -->
+                    <div>
+                        <select id="strategicCityFilter" class="filter-select" style="background:#222; border:1px solid #444; color:white; padding:8px; border-radius:6px;">
+                            <option value="all">Tüm Şehirler</option>
+                            <!-- Options will be loaded via JS -->
+                        </select>
+                    </div>
+                </div>
 
-                <!-- 1. FORECAST SECTION -->
-                <div class="chart-container" style="margin-bottom: 24px;">
-                    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
-                        <h3>🔮 Gelecek 6 Ay Tahmini (AI Modeli)</h3>
-                        <div id="growthBadge"
-                            style="background:#222; padding:5px 10px; border-radius:4px; font-weight:bold; color:#aaa;">
-                            Büyüme: --
+                <!-- TREND ANALYSIS (Replaces Forecast) -->
+                <div class="card" style="margin-bottom:20px;">
+                    <h3><i class="fas fa-chart-line"></i> Trend Analizi (Dönemsel Büyüme)</h3>
+                    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:20px; margin-top:20px;">
+                        <!-- Rising -->
+                        <div style="background:rgba(0, 255, 157, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--success-color);">
+                            <h4 style="color:var(--success-color); margin-top:0;">🚀 Yükselen Trendler</h4>
+                            <div id="trendRisingList">Veriler yükleniyor...</div>
                         </div>
-                    </div>
-                    <div
-                        style="background: rgba(255,255,255,0.05); padding:15px; border-radius:8px; margin-bottom:15px;">
-                        <span style="color:var(--accent-color);">💡 YZ Önerisi:</span>
-                        <span id="forecastRecommendation" style="color:#ddd;">Veri yükleniyor...</span>
-                    </div>
-                    <div style="position: relative; height: 350px; width: 100%;">
-                        <canvas id="forecastChart"></canvas>
+                        <!-- Falling -->
+                        <div style="background:rgba(255, 0, 85, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--danger-color);">
+                            <h4 style="color:var(--danger-color); margin-top:0;">📉 Düşüş Gösterenler</h4>
+                            <div id="trendFallingList">Veriler yükleniyor...</div>
+                        </div>
                     </div>
                 </div>
 
