--- a/public/panel.html
+++ b/public/panel.html
@@ -51,10 +51,21 @@
                         <option value="all">Tüm Zamanlar</option>
                     </select>
                 </div>
+
+                <!-- Custom Date Range -->
+                <div class="filter-group">
+                    <label>Özel Tarih Aralığı</label>
+                    <div style="display: flex; gap: 5px;">
+                        <input type="date" id="startDate" class="date-input">
+                        <span style="align-self: center;">-</span>
+                        <input type="date" id="endDate" class="date-input">
+                    </div>
+                </div>
+
                 <!-- Global Refresh Button -->
                 <div class="filter-group">
                     <button onclick="updateDashboard()"
-                        style="background: var(--accent-color); border:none; padding:10px 20px; border-radius:6px; font-weight:600; cursor:pointer; color:#000;">Yenile</button>
+                        style="background: var(--accent-color); border:none; padding:10px 20px; border-radius:6px; font-weight:600; cursor:pointer; color:#000;">Filtrele</button>
                 </div>
             </div>
 
@@ -167,7 +178,8 @@
                     <h2 style="margin:0;">Stratejik Planlama & Büyüme Fırsatları</h2>
                     <!-- Strategic City Filter -->
                     <div>
-                        <select id="strategicCityFilter" class="filter-select" style="background:#222; border:1px solid #444; color:white; padding:8px; border-radius:6px;">
+                        <select id="strategicCityFilter" class="filter-select"
+                            style="background:#222; border:1px solid #444; color:white; padding:8px; border-radius:6px;">
                             <option value="all">Tüm Şehirler</option>
                             <!-- Options will be loaded via JS -->
                         </select>
@@ -179,12 +191,14 @@
                     <h3><i class="fas fa-chart-line"></i> Trend Analizi (Dönemsel Büyüme)</h3>
                     <div style="display:grid; grid-template-columns: 1fr 1fr; gap:20px; margin-top:20px;">
                         <!-- Rising -->
-                        <div style="background:rgba(0, 255, 157, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--success-color);">
+                        <div
+                            style="background:rgba(0, 255, 157, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--success-color);">
                             <h4 style="color:var(--success-color); margin-top:0;">🚀 Yükselen Trendler</h4>
                             <div id="trendRisingList">Veriler yükleniyor...</div>
                         </div>
                         <!-- Falling -->
-                        <div style="background:rgba(255, 0, 85, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--danger-color);">
+                        <div
+                            style="background:rgba(255, 0, 85, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--danger-color);">
                             <h4 style="color:var(--danger-color); margin-top:0;">📉 Düşüş Gösterenler</h4>
                             <div id="trendFallingList">Veriler yükleniyor...</div>
                         </div>
