--- a/public/panel.html
+++ b/public/panel.html
@@ -15,40 +15,46 @@
     <div class="dashboard-container">
         <!-- Sidebar -->
         <aside class="sidebar">
-            <div style="margin-bottom: 40px;">
+            <div style="margin-bottom: 20px;">
                 <h2 style="margin-bottom: 0;">ALTERNATİF KDS</h2>
-                <small style="color: grey;">v1.0.0</small>
+                <small style="color: grey;">v2.0 Executive</small>
             </div>
+
+            <!-- Moved Welcome Message -->
+            <!-- User Info (Styled in CSS) -->
+            <div class="sidebar-user-info">
+                <div>Merhaba,</div>
+                <div id="welcomeUser">Yönetici</div>
+            </div>
+
             <nav>
-                <a href="#" class="menu-item active" onclick="switchView('view-home', this)">📊 Genel Bakış</a>
-                <a href="#" class="menu-item" onclick="switchView('view-sales', this)">📈 Satış Analizi</a>
-                <a href="#" class="menu-item" onclick="switchView('view-products', this)">📦 Ürün Analizi</a>
+                <a href="#" class="menu-item active" onclick="switchView('view-executive', this)">📊 Executive
+                    Dashboard</a>
                 <a href="#" class="menu-item" onclick="switchView('view-strategic', this)">⚡ Stratejik Planlama</a>
             </nav>
-            <button onclick="logout()" class="logout-btn">Çıkış Yap</button>
+            <button onclick="logout()" class="logout-btn"><i class="fas fa-sign-out-alt"></i> ÇIKIŞ YAP</button>
         </aside>
 
         <!-- Main Content -->
         <main class="main-content">
-            <div class="header">
-                <div class="welcome-text">
-                    <h1 id="welcomeUser">Hoşgeldiniz, Yönetici</h1>
-                    <p>Karar Destek Sistemi Paneli</p>
-                </div>
-            </div>
 
-            <!-- Filters -->
-            <div class="filter-bar" style="border-bottom: 1px solid #333; padding-bottom: 20px;">
+            <!-- Global Filters -->
+            <div class="filter-bar">
                 <div class="filter-group">
                     <label>Dönem Seçimi</label>
                     <select id="periodFilter" onchange="updateDashboard()">
                         <option value="12" selected>Son 12 Ay</option>
                         <option value="6">Son 6 Ay</option>
-                        <option value="9">Son 9 Ay</option>
                         <option value="2025">2025</option>
                         <option value="2024">2024</option>
-                        <option value="2023">2023</option>
                         <option value="all">Tüm Zamanlar</option>
+                    </select>
+                </div>
+
+                <div class="filter-group">
+                    <label>Şehir</label>
+                    <select id="cityFilter" onchange="updateDashboard()"> <!-- Trigger update directly -->
+                        <option value="all">Tüm Şehirler</option>
                     </select>
                 </div>
 
@@ -62,143 +68,101 @@
                     </div>
                 </div>
 
-                <!-- Global Refresh Button -->
                 <div class="filter-group">
-                    <button onclick="updateDashboard()"
-                        style="background: var(--accent-color); border:none; padding:10px 20px; border-radius:6px; font-weight:600; cursor:pointer; color:#000;">Filtrele</button>
+                    <button onclick="updateDashboard()">Filtrele</button>
                 </div>
             </div>
 
-            <!-- VIEW 1: HOME (GENEL BAKIŞ) -->
-            <div id="view-home" class="view-section">
-                <!-- KPI Cards -->
-                <div class="stats-grid">
-                    <div class="stat-card">
+            <!-- VIEW 1: EXECUTIVE DASHBOARD (Combined) -->
+            <div id="view-executive" class="view-section executive-grid">
+
+                <!-- 1. KPI Cards -->
+                <div class="kpi-grid">
+                    <div class="kpi-card">
+                        <i class="fas fa-wallet kpi-icon"></i>
                         <div class="stat-title">Toplam Ciro</div>
-                        <div class="stat-value" id="totalRevenue">₺0.00</div>
-                        <div class="stat-trend" id="revenuePeriodLabel">Son 12 Ay</div>
+                        <div class="stat-value" id="totalRevenue">-</div>
+                        <div class="stat-trend" id="revenuePeriodLabel">Seçili Dönem</div>
                     </div>
-                    <div class="stat-card">
-                        <div class="stat-title">En Çok Satılan Ürün</div>
-                        <div class="stat-value" id="bestProduct" style="color: var(--warning-color); font-size: 24px;">-
-                        </div>
+                    <div class="kpi-card">
+                        <i class="fas fa-shopping-basket kpi-icon"></i>
+                        <div class="stat-title">Toplam Satış Adedi</div>
+                        <div class="stat-value" id="totalSalesCount">-</div>
                     </div>
-                    <div class="stat-card">
-                        <div class="stat-title">En İyi Şube</div>
+                    <div class="kpi-card">
+                        <i class="fas fa-store kpi-icon"></i>
+                        <div class="stat-title">En Başarılı Şube</div>
                         <div class="stat-value" id="bestBranch" style="font-size: 20px;">-</div>
                     </div>
-                </div>
-
-                <!-- Main Forecast Chart -->
-                <div class="chart-container">
-                    <h3>Satış Trendi</h3>
-                    <div style="position: relative; height: 350px; width: 100%;">
-                        <canvas id="trendChart"></canvas>
-                    </div>
-                </div>
-            </div>
-
-            <!-- VIEW 2: SALES ANALYSIS (SATIŞ ANALİZİ) -->
-            <div id="view-sales" class="view-section" style="display:none;">
-                <div class="filter-bar">
-                    <div class="filter-group">
-                        <label>Şehir</label>
-                        <select id="cityFilter">
-                            <option value="all">Tüm Şehirler</option>
-                        </select>
-                    </div>
-                    <div class="filter-group">
-                        <label>Market / Şube</label>
-                        <select id="marketFilter">
-                            <option value="all">Tüm Şubeler</option>
-                        </select>
-                    </div>
-                    <div class="filter-group" style="justify-content: flex-end;">
-                        <button onclick="updateDashboard()"
-                            style="background: var(--accent-color); border:none; padding:8px 16px; border-radius:6px; font-weight:600; cursor:pointer;">Filtrele</button>
+                    <div class="kpi-card" style="border-bottom: 2px solid var(--danger-color);">
+                        <i class="fas fa-exclamation-triangle kpi-icon"
+                            style="color:var(--danger-color); opacity:1;"></i>
+                        <div class="stat-title">Kritik Kategori Uyarısı</div>
+                        <div class="stat-value" id="criticalStock" style="font-size: 18px; color:var(--danger-color);">-
+                        </div>
+                        <div class="stat-trend" style="background:rgba(239, 68, 68, 0.1); color:var(--danger-color);">
+                            Stok Kontrolü Önerilir</div>
                     </div>
                 </div>
 
-                <div class="charts-grid">
-                    <!-- City Chart Removed as requested -->
-                </div>
+                <!-- 2. Charts Split Grid (Fills remaining height) -->
+                <div class="charts-split-grid">
 
-                <div class="chart-container" style="margin-top: 24px;">
-                    <h3>Tüm Şubelerin Performans Karşılaştırması</h3>
-                    <div style="height: 400px; overflow-x: auto;">
-                        <canvas id="branchChart" style="min-width: 1000px;"></canvas>
-                    </div>
-                </div>
-            </div>
-
-            <!-- VIEW 3: PRODUCT ANALYSIS (ÜRÜN ANALİZİ) -->
-            <div id="view-products" class="view-section" style="display:none;">
-                <div class="filter-bar">
-                    <div class="filter-group">
-                        <label>Kategori</label>
-                        <select id="categoryFilter">
-                            <option value="all">Tüm Kategoriler</option>
-                        </select>
-                    </div>
-                    <button onclick="updateDashboard()"
-                        style="background: var(--accent-color); border:none; padding:8px 16px; border-radius:6px; font-weight:600; cursor:pointer;">Filtrele</button>
-                </div>
-
-                <div class="charts-grid">
-                    <div class="chart-container">
-                        <h3>Kategori Dağılımı</h3>
-                        <div style="position: relative; height: 350px; width: 100%;">
-                            <canvas id="categoryChart"></canvas>
+                    <!-- Top: Trend Chart -->
+                    <div class="trend-section dashboard-card">
+                        <h3><i class="fas fa-chart-line"></i> Satış Trendi</h3>
+                        <div class="chart-wrapper">
+                            <canvas id="trendChart"></canvas>
                         </div>
                     </div>
-                    <div class="chart-container">
-                        <h3>En Çok Satan Ürünler</h3>
-                        <div style="overflow-x:auto; max-height: 400px;">
-                            <table style="width:100%; text-align:left; border-collapse: collapse; margin-top:10px;">
-                                <thead>
-                                    <tr style="border-bottom:1px solid #444; color:#888;">
-                                        <th style="padding:10px;">Ürün</th>
-                                        <th style="padding:10px;">Kat.</th>
-                                        <th style="padding:10px;">Adet</th>
-                                        <th style="padding:10px;">Ciro</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="topProductsBody">
-                                    <!-- JS will fill here -->
-                                </tbody>
-                            </table>
+
+                    <!-- Bottom: Details Grid -->
+                    <div class="details-section">
+                        <div class="dashboard-card">
+                            <h3>Kategori Dağılımı</h3>
+                            <div class="chart-wrapper">
+                                <canvas id="categoryChart"></canvas>
+                            </div>
+                        </div>
+                        <div class="dashboard-card">
+                            <h3>Market Ciro Sıralaması</h3>
+                            <div class="chart-wrapper">
+                                <canvas id="marketChart"></canvas>
+                            </div>
+                        </div>
+                        <div class="dashboard-card">
+                            <h3>En Çok Satan 5 Ürün</h3>
+                            <div class="table-wrapper">
+                                <table style="width:100%; border-collapse: collapse;">
+                                    <tbody id="topProductsBody">
+                                        <!-- JS Fill -->
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
 
-            <!-- VIEW 4: STRATEGIC PLANNING (STRATEJİK PLANLAMA) -->
+            <!-- VIEW 2: STRATEGIC PLANNING (Existing, slightly styled container) -->
             <div id="view-strategic" class="view-section" style="display:none;">
-                <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
-                    <h2 style="margin:0;">Stratejik Planlama & Büyüme Fırsatları</h2>
-                    <!-- Strategic City Filter -->
-                    <div>
-                        <select id="strategicCityFilter" class="filter-select"
-                            style="background:#222; border:1px solid #444; color:white; padding:8px; border-radius:6px;">
-                            <option value="all">Tüm Şehirler</option>
-                            <!-- Options will be loaded via JS -->
-                        </select>
-                    </div>
+                <div style="margin-bottom:20px;">
+                    <h2 style="margin:0;">Stratejik Planlama & Büyüme</h2>
                 </div>
 
-                <!-- TREND ANALYSIS (Replaces Forecast) -->
-                <div class="card" style="margin-bottom:20px;">
-                    <h3><i class="fas fa-chart-line"></i> Trend Analizi (Dönemsel Büyüme)</h3>
-                    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:20px; margin-top:20px;">
-                        <!-- Rising -->
+                <div class="card"
+                    style="margin-bottom:24px; padding:20px; background:var(--card-bg); border-radius:16px;">
+                    <h3 style="margin-bottom:20px; text-transform:uppercase; font-size:14px; color:#aaa;">Trend Analizi
+                    </h3>
+                    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:20px;">
                         <div
-                            style="background:rgba(0, 255, 157, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--success-color);">
+                            style="background:rgba(0, 255, 157, 0.05); padding:15px; border-radius:12px; border-left:4px solid var(--success-color);">
                             <h4 style="color:var(--success-color); margin-top:0;">🚀 Yükselen Trendler</h4>
                             <div id="trendRisingList">Veriler yükleniyor...</div>
                         </div>
-                        <!-- Falling -->
                         <div
-                            style="background:rgba(255, 0, 85, 0.05); padding:15px; border-radius:8px; border-left:4px solid var(--danger-color);">
+                            style="background:rgba(255, 0, 85, 0.05); padding:15px; border-radius:12px; border-left:4px solid var(--danger-color);">
                             <h4 style="color:var(--danger-color); margin-top:0;">📉 Düşüş Gösterenler</h4>
                             <div id="trendFallingList">Veriler yükleniyor...</div>
                         </div>
@@ -206,39 +170,28 @@
                 </div>
 
                 <div class="charts-grid">
-
-                    <!-- 2. BRANCH PERFORMANCE MATRIX -->
                     <div class="chart-container">
-                        <h3>📊 Şube Performans Matrisi (Verimlilik)</h3>
-                        <p style="font-size:12px; color:#888; margin-bottom:10px;">Şehir Ortalaması = %100 kabul edilir.
-                        </p>
+                        <h3>📊 Şube Performans Matrisi</h3>
                         <div style="overflow-x:auto; max-height: 400px;">
                             <table style="width:100%; text-align:left; border-collapse: collapse;">
-                                <thead>
-                                    <tr style="border-bottom:1px solid #444; color:#888;">
+                                <thead style="background:#1e293b; position:sticky; top:0;">
+                                    <tr>
                                         <th style="padding:10px;">Şube</th>
                                         <th style="padding:10px;">Vrm. Skoru</th>
                                         <th style="padding:10px;">Durum</th>
                                     </tr>
                                 </thead>
-                                <tbody id="branchPerformanceBody">
-                                    <!-- JS will fill here -->
-                                </tbody>
+                                <tbody id="branchPerformanceBody"></tbody>
                             </table>
                         </div>
                     </div>
 
-                    <!-- 3. LOCATION ANALYSIS opportunities -->
                     <div class="chart-container">
                         <h3>📍 Lokasyon Fırsat Analizi</h3>
-                        <p style="font-size:12px; color:#888; margin-bottom:10px;">Düşük rekabet, yüksek potansiyel
-                            bölgeler.</p>
                         <div id="locationOpportunities"
                             style="display:flex; flex-direction:column; gap:10px; max-height:400px; overflow-y:auto;">
-                            <!-- Cards will be injected here -->
                         </div>
                     </div>
-
                 </div>
             </div>
 
