versiyon 2 css düzeltildi daha okunabilir bir temaya geçildi

--- a/public/panel.html
+++ b/public/panel.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alternatif KDS - Yönetim Paneli</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
@@ -28,8 +30,7 @@
             </div>
 
             <nav>
-                <a href="#" class="menu-item active" onclick="switchView('view-executive', this)">📊 Executive
-                    Dashboard</a>
+                <a href="#" class="menu-item active" onclick="switchView('view-executive', this)">📊 Dashboard</a>
                 <a href="#" class="menu-item" onclick="switchView('view-strategic', this)">⚡ Stratejik Planlama</a>
             </nav>
             <button onclick="logout()" class="logout-btn"><i class="fas fa-sign-out-alt"></i> ÇIKIŞ YAP</button>
